--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Calculator Project</title>
 </head>
 <body>
+
+    <div id="calculator-body">
+
+        <div id="display">DISPLAY 1 2 3</div>
+        <!-- DIGITS -->
+        <button id="one">1</button>
+        <button id="two">2</button>
+        <button id="three">3</button>
+        <button id="four">4</button>
+        <button id="five">5</button>
+        <button id="six">6</button>
+        <button id="seven">7</button>
+        <button id="eight">8</button>
+        <button id="nine">9</button>
+        <button id="zero">0</button>
+        <!-- OPERATORS -->
+        <button id="add">+</button>
+        <button id="subtract">-</button>
+        <button id="multiply">x</button>
+        <button id="divide">/</button>
+        <button id="equals">=</button>
+        <button id="clear">C</button>
+
+    </div>
     
 </body>
 </html>
