Add basic calculator functionality
Calculator works when inputting a number, then an operator, then another
number, and clicking equals.

For later commits, add functions detailed in part 7 of project steps.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="calculator-body">
 
-        <div id="display">DISPLAY 1 2 3</div>
+        <div id="display"></div>
 
         <div id="button-container">
             <!-- ROW 1 -->
