--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
             <button id="nine">9</button>
             <button id="multiply">x</button>
             <!-- ROW 4 -->
-            <button id="clear">C</button>
             <button id="zero">0</button>
+            <button id="decimal">.</button>
             <button id="equals">=</button>
             <button id="divide">/</button>
+             <!-- ROW 5 -->
+             <button id="clear">C</button>
+             <button id="backspace">B</button>
+
         </div>
 
     </div>
