Add further styling

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 <body>
 
     <div id="calculator-body">
+        <div id="calculator-top">
 
-        <div id="display"></div>
+            <div id="design-container">
+                <div id="left-stripe"></div>
+                <div id="middle-stripe"></div>
+                <div id="right-stripe"></div>
+            </div>
+
+            <div id="display"></div>
+
+        </div>
 
         <div id="button-container">
             <!-- ROW 1 -->
